[package]
name = "ace-of-the-heavens"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
#bevy = { version = "0.11.2"}
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_asset_loader = "0.17.0"
bevy_ggrs = { version = "0.13" }
bevy_matchbox = { version = "0.7", features = ["ggrs"] }
bevy_embedded_assets = "0.8.0"

chrono = "0.4.31"
