[package]
name = "ace-of-the-heavens"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.2"}

bevy_hanabi = "0.7.0"
bevy_kira_audio = "0.17.0"
bevy_console = "0.8.0"
noisy_bevy = "0.4.0"

bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy_common_assets = { version = "0.7.0", features = ["toml"]}
bevy_embedded_assets = "0.8.0"

bevy_ggrs = { version = "0.13" }
bevy_matchbox = { version = "0.7", features = ["ggrs"] }
bevy_roll_safe = { git = "https://github.com/johanhelsing/bevy_roll_safe" }

open = "5.0.0"
clap = "4.1.10"
bincode = "1.3.3"
serde = "1.0.189"
chrono = "0.4.31"
rand = "0.8.5"
rand_xoshiro = "0.6.0"

[patch.crates-io]
bevy = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
bevy_matchbox = { git = "https://github.com/Praxtube/matchbox", branch = "v0.7.0patch"}
